--- a/styles/style.css
+++ b/styles/style.css
@@ -2,3 +2,88 @@
     margin: 0;
     padding: 0;
 }
+
+/* Font */
+
+/* Logo font */
+
+
+.inter-logo{
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+/* Main font */
+.raleway-main {
+  font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+
+/* Shared styles */
+.main-button{
+    width: 132px;
+    height: 48px;
+    background-color: #4E47FF;
+    color: #fff;
+    font-weight: bold;
+    font-size: 16px;
+    border-radius: 5px;
+    border: none;
+}
+.main-button:hover{
+    background-color: #4d47ffca;
+    width: 134px;
+    height: 48px;
+    font-size: 18px;
+}
+
+/* header */
+header{
+    width: 100%;
+    height: 700px; 
+    background-image: url(../Assets/Hero-bg.png);
+}
+
+/* Nav Style */
+nav{
+    margin: 0px 150px;
+}
+nav ul{
+    display: flex;
+    justify-content: space-between;
+}
+nav ul li{
+    margin-top: 50px;
+    list-style: none;
+}
+nav li a{
+    text-decoration: none;
+    color: #4E47FF;
+    font-size: 34px;
+    font-weight: 800;
+} 
+
+/* Banner styles */
+
+.banner-conatiner{
+    margin: 200px 265px 150px 265px;
+}
+.banner-conatiner h1{
+    font-size: 65px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.banner-conatiner div{
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 150px;
+}
