--- a/styles/style.css
+++ b/styles/style.css
@@ -24,20 +24,20 @@
 
 /* Shared styles */
 .main-button{
-    width: 132px;
-    height: 48px;
+    padding: 12px 36px;
     background-color: #4E47FF;
     color: #fff;
     font-weight: bold;
     font-size: 16px;
     border-radius: 5px;
     border: none;
+    cursor: pointer;
 }
 .main-button:hover{
-    background-color: #4d47ffca;
-    width: 134px;
-    height: 48px;
-    font-size: 18px;
+    background-color: #4d47ffb6;
+}
+.main-color{
+    color: #252432;
 }
 
 /* header */
@@ -66,8 +66,7 @@ nav li a{
     font-weight: 800;
 } 
 
-/* Banner styles */
-
+/* ##Start Banner styles */
 .banner-conatiner{
     margin: 200px 265px 150px 265px;
 }
@@ -87,3 +86,40 @@ nav li a{
     text-align: center;
     margin-bottom: 150px;
 }
+/* &&End Banner styles */
+
+
+
+/* ##Start Action section style */
+.action{
+    margin-top: 115px;
+    margin-bottom: 115px;
+}
+.action-container{
+    display: flex;
+    max-width: 1140px;
+    margin: auto;
+    gap: 220px;
+    /* justify-content: space-around; */
+}
+.action-container div{
+    max-width: 517px;
+    margin: 63px;    
+}
+.action-container div h2{
+    color: rgba(37, 36, 50, 1);
+    font-size: 42px;
+    font-weight: bold;
+    
+}
+.action-container div p{
+    color: #252432;
+    margin: 25px 0;
+    line-height: 30px;
+    font-size: 24px;
+}
+
+.action-container img{
+    border-radius: 30px;
+}
+/* &&End Action section style */
