--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,7 @@
 
 /* Shared styles */
 .main-button{
-    padding: 12px 36px;
+    padding: 16px 36px;
     background-color: #4E47FF;
     color: #fff;
     font-weight: bold;
@@ -123,3 +123,89 @@ nav li a{
     border-radius: 30px;
 }
 /* &&End Action section style */
+
+/* New Section */
+.number{
+    max-width: 1140px;
+    margin: auto;
+    background-color: #8a86ff41;
+    border-radius: 20px;
+}
+.number-container{
+    padding: 40px 80px;
+}
+.number h1{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    font-size: 38px;
+    font-weight: 800;
+    color: #252432;
+}
+.number-items{
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-between;
+
+}
+.number-items h1{
+    font-weight: 800;
+    font-size: 80px;
+    color: rgba(78, 71, 255, 1);
+}
+.number-items p{
+    margin-top: 10px;
+    font-size: 20px;
+}
+
+/* Review styles */
+.card-margin{
+    margin-bottom: 135px;
+}
+
+
+.review{
+    max-width: 1140px;
+    margin: auto;
+}
+.review-container h2{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-size: 42px;
+    font-weight: bold;
+    color: #252432;
+    margin-bottom: 50px;
+}
+.cards{
+    display: flex;
+    justify-content: space-around;
+}
+.card{
+    max-width: 336px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 24px;
+    border-radius: 14px;
+    /* line-height: 30px; */
+
+}
+.inner-card-p{
+    line-height: 25px;
+    margin-top: 10px;
+}
+.icons{
+    display: flex;
+    gap: 5px;
+    margin-bottom: 20px;
+}
+.inner-conatiner{
+    margin-top: 10px;
+    display: flex;
+    gap: 15px;
+    /* justify-content: center;
+    text-align: center; */
+    color: #25243296;
+    line-height: 20px;
+    align-items: center;
+}
