--- a/styles/style.css
+++ b/styles/style.css
@@ -299,3 +299,42 @@ input[type="submit"]{
 input[type="submit"]:hover{
     background-color: #4d47ffb6;
 }
+
+/* Footer */
+footer{
+    width: 100%;
+    margin: auto;
+    background-color: rgba(215, 213, 251, 0.774);
+}
+.footer-container{
+    padding: 155px 400px;
+    max-width: 530px;
+    margin: auto;
+}
+.footer-logo{
+    font-size: 1000;
+    font-size: 100px;
+    color: rgba(78, 71, 255, 1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.footer-des{
+    font-size: 16px;
+    color: 8987A1;
+    line-height: 30px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+
+.footer-items{
+
+    margin-top: 10px;
+    gap: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
