--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,7 @@
 header{
     width: 100%;
     height: 700px; 
-    background-image: url(../Assets/Hero-bg.png);
+    background-image: url(./../Assets/Hero-bg.png);
 }
 
 /* Nav Style */
